src/test/ui/issues/issue-5099.stderr
error[E0425]: cannot find value `this` in this scope
  --> $DIR/issue-5099.rs:1:31
   |
LL | trait B < A > { fn a() -> A { this.a } }
   |                               ^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
