src/test/ui/issues/issue-5099.rs
trait B < A > { fn a() -> A { this.a } } //~ ERROR cannot find value `this` in this scope

fn main() {}
